k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-service
  namespace: default
spec:
  selector:
    app: k8s-demo
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
